# CUDAatScaleForTheEnterpriseCourseProject

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  dockerfile  run.sh
include/: image_augmentation_utils.hpp  image_augmentations.hpp
src/: image_augmentation_main.cpp
